# starfetch

./: .gitignore  README.md  install.sh  install_mac.sh  makefile
.github/workflows/: c-cpp.yml  flawfinder.yml
GUI/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
GUI/include/: json.hpp
res/: c_list.txt  help  help_message.txt  res_gen.sh  template
res/constellations/: andromeda.json  antlia.json  apus.json  aquarius.json  aquila.json  ara.json  aries  aries.json  auriga.json  bootes.json  caelum.json  camelopardalis.json  cancer  cancer.json  canes_venatici.json  canis_major.json  canis_minor.json  capricorn  capricorn.json  carina.json  cassiopeia  cassiopeia.json  centaurus.json  circinus.json  corona_borealis  crux.json  cygnus  cygnus.json  gemini.json  leo  leo.json  libra  libra.json  lupus.json  lyra.json  monoceros.json  ophiuchus.json  orion  orion.json  pisces.json  (+11 more)
res/norse-constellations/: asarbardagi.json  friggerock.json  karlvagn.json  kvennavagn.json  puppis.json  test-const.json  ulfskeptr.json
src/: constellations_list.template.hpp  randomConst.lisp  starfetch.bat  starfetch.cpp
starfetch/: install.sh  install_mac.sh
starfetch/constellations/: aries  cancer  taurus  ursa_major  ursa_minor
starfetch/res/: help_message.txt
starfetch/src/: starfetch.cpp
